--- a/web/src/components/core/section.scss
+++ b/web/src/components/core/section.scss
@@ -1,5 +1,5 @@
 @use "@assets/fonts.scss";
-@use "eos-ds/dist/scss/eos-base/variables/branding.scss";
+@use "@assets/_variables.scss" as branding;
 
 .d-installer-section {
   .d-installer-section-icon {
@@ -8,7 +8,7 @@
 
   .d-installer-section-title.using-separator {
     border-bottom: 1px solid #efefef;
-    border-image: linear-gradient(45deg, branding.$eos-bc-gray-50, transparent) 1;
+    border-image: linear-gradient(45deg, branding.$bc-gray-50, transparent) 1;
   }
 
   .d-installer-section-action {
@@ -16,14 +16,14 @@
     transition: all 0.2s ease-in-out;
 
     svg {
-      fill: branding.$eos-bc-green-500;
+      fill: branding.$bc-green-500;
     }
 
     &:hover {
       transform: scale(1.4);
 
       svg {
-        fill: branding.$eos-bc-pine-500;
+        fill: branding.$bc-pine-500;
       }
     }
   }
